--- a/Conv_ex.ipynb
+++ b/Conv_ex.ipynb
@@ -22,7 +22,7 @@
     "   - `import cv2`: Imports OpenCV (cv2) for reading and processing images.\n",
     "\n",
     "2. **Define Image Path:**\n",
-    "   - `image_path = '/Users/aristotelisgkithkopoulos/Desktop/Convolutional Example/photos/images.jpeg'`: Specifies the path to the image file to be loaded and processed.\n",
+    "   - `image_path = '/photos/images.jpeg'`: Specifies the path to the image file to be loaded and processed.\n",
     "\n",
     "3. **Load and Preprocess Image Function (`load_image`):**\n",
     "   - `def load_image(image_path):`: Defines a function `load_image` that takes `image_path` as an argument.\n",
